syntax = "proto3";

package model;

option java_package = "pl.piomin.services.grpc.product.model";
option java_outer_classname = "ProductProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ProductService {
  rpc FindAll(google.protobuf.Empty) returns (Products) {}
  rpc AddProduct(Product) returns (Product) {}
  rpc UpdateProduct(Product) returns (Product) {}
  rpc DeleteProduct(google.protobuf.StringValue) returns (Product) {}
}

message Product {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
}

message Products {
  repeated Product products = 1;
}