syntax = "proto3";

package model;

option java_package = "pl.piomin.services.grpc.image.model";
option java_outer_classname = "ImageProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message ImageData {
  string name = 1;
  string type = 2;
  bytes data = 3;
}

service ImageService {
  rpc UploadImage(ImageData) returns (UploadImageResponse);
  rpc DownloadImage(DownloadImageRequest) returns (DownloadImageResponse);
}

message UploadImageResponse {
  string message = 1;
}

message DownloadImageRequest {
  string imageName = 1;
}

message DownloadImageResponse {
  bytes imageData = 1;
}